fixed bug with wrong padding of div.test_description_element's (with adding new class - test_description_element_with_buttons)

--- a/octapp/static/octapp/css/test_detail.sass
+++ b/octapp/static/octapp/css/test_detail.sass
@@ -36,18 +36,10 @@
       width: 48%
       padding: 4px
       
-  div.test_description_element:last-of-type
+  div.test_description_element_with_buttons
     padding: 0 2px 2px 2px
     text-align: center
-
-  div.test_description_element:first-of-type
-    padding: 0 2px 2px 2px
-    text-align: center
-
-  div.test_description_element:nth-of-type(9)
-    padding: 0 2px 2px 2px
-    text-align: center
-    .btn
+    .start_passing_btn
       margin: 0
       padding: 4px
       width: 100%
